// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Forms /> create form item 1`] = `
<div
  className="fd-form__set"
>
  <div
    className="fd-form__item fd-form__item--inline fd-form__item--check"
  >
    <label
      className="fd-form__label"
      forAttr="input-1"
    >
      Default Input
      
    </label>
    <input
      className="fd-form__control"
      id="input-1"
      placeholder="Field placeholder text"
      type="text"
    />
  </div>
  <div
    className="fd-form__item"
  >
    <label
      aria-required={true}
      className="fd-form__label"
      forAttr="input-1"
    >
      Default Input
      *
    </label>
    <input
      className="fd-form__control is-help"
      id="input-1"
      placeholder="Field placeholder text"
      type="text"
    />
    <textarea
      className="fd-form__control blue"
      id="textarea-1"
    >
      Pellentesque metus lacus commodo eget justo ut rutrum varius nunc.
    </textarea>
    <textarea
      className="fd-form__control"
      id="textarea-2"
    >
      Pellentesque metus lacus commodo eget justo ut rutrum varius nunc.
    </textarea>
    <span
      className="fd-form__message fd-form__message--help"
    >
      Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
    </span>
    <span
      className="fd-form__message blue"
    >
      Pellentesque metus lacus commodo eget justo ut rutrum varius nunc
    </span>
    <select
      className="fd-form__control"
      disabled=""
      id="select-1"
    >
      <option
        value="1"
      >
        Duis malesuada odio volutpat elementum
      </option>
      <option
        value="2"
      >
        Suspendisse ante ligula
      </option>
      <option
        value="3"
      >
        Sed bibendum sapien at posuere interdum
      </option>
    </select>
    <select
      className="fd-form__control blue"
      disabled={true}
      id="select-1"
    >
      <option
        value="1"
      >
        Duis malesuada odio volutpat elementum
      </option>
    </select>
  </div>
</div>
`;

exports[`<Forms /> create form item 2`] = `
<div
  className="fd-form__set blue"
>
  <div
    className="fd-form__item fd-form__item--inline fd-form__item--check"
  >
    <label
      className="fd-form__label"
      forAttr="input-1"
    >
      Default Input
      
    </label>
    <input
      className="fd-form__control"
      id="input-1"
      placeholder="Field placeholder text"
      type="text"
    />
  </div>
</div>
`;

exports[`<Forms /> create form item 3`] = `
<fieldset
  className="fd-form__set blue"
>
  <legend
    className="fd-form__legend blue"
  >
    Radio buttons
  </legend>
  <div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={false}
        className="fd-form__control"
        disabled=""
        id="radio-1"
        name="radio-1"
        onChange={[Function]}
        type="radio"
        value="radio-1"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-1"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={true}
        className="fd-form__control"
        disabled=""
        id="radio-2"
        name="radio-2"
        onChange={[Function]}
        type="radio"
        value="radio-2"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-2"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={false}
        className="fd-form__control"
        disabled=""
        id="radio-3"
        name="radio-3"
        onChange={[Function]}
        type="radio"
        value="radio-3"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-3"
      >
        Option 3
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Forms /> create form item 4`] = `
<fieldset
  className="fd-form__set"
>
  <legend
    className="fd-form__legend blue"
  >
    Radio buttons
  </legend>
  <div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={false}
        className="fd-form__control"
        disabled=""
        id="radio-1"
        name="radio-1"
        onChange={[Function]}
        type="radio"
        value="radio-1"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-1"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={true}
        className="fd-form__control"
        disabled=""
        id="radio-2"
        name="radio-2"
        onChange={[Function]}
        type="radio"
        value="radio-2"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-2"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={false}
        className="fd-form__control"
        disabled=""
        id="radio-3"
        name="radio-3"
        onChange={[Function]}
        type="radio"
        value="radio-3"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-3"
      >
        Option 3
      </label>
    </div>
  </div>
  <legend
    className="fd-form__legend"
    legendText="Radio buttons disabled"
  />
  <div>
    <div
      className="fd-form__item fd-form__item--inline fd-form__item--check"
    >
      <label
        className="fd-form__label"
        htmlFor="radio-4"
      >
        <input
          checked={true}
          className="fd-form__control"
          disabled={true}
          id="radio-4"
          name="radio-4"
          onChange={[Function]}
          type="radio"
          value="radio-4"
        />
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--inline fd-form__item--check"
    >
      <label
        className="fd-form__label"
        htmlFor="radio-5"
      >
        <input
          checked={false}
          className="fd-form__control"
          disabled={true}
          id="radio-5"
          name="radio-5"
          onChange={[Function]}
          type="radio"
          value="radio-5"
        />
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--inline fd-form__item--check"
    >
      <label
        className="fd-form__label"
        htmlFor="radio-6"
      >
        <input
          checked={false}
          className="fd-form__control"
          disabled={true}
          id="radio-6"
          name="radio-6"
          onChange={[Function]}
          type="radio"
          value="radio-6"
        />
        Option 3
      </label>
    </div>
  </div>
  <legend
    className="fd-form__legend"
    legendText="Inline Radio buttons"
  />
  <div>
    <div
      className="fd-form__item fd-form__item--inline fd-form__item--check"
    >
      <label
        className="fd-form__label"
        htmlFor="radio-7"
      >
        <input
          checked={false}
          className="fd-form__control"
          disabled=""
          id="radio-7"
          name="radio-7"
          onChange={[Function]}
          type="radio"
          value="radio-7"
        />
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--inline fd-form__item--check"
    >
      <label
        className="fd-form__label"
        htmlFor="radio-8"
      >
        <input
          checked={false}
          className="fd-form__control"
          disabled=""
          id="radio-8"
          name="radio-8"
          onChange={[Function]}
          type="radio"
          value="radio-8"
        />
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--inline fd-form__item--check"
    >
      <label
        className="fd-form__label"
        htmlFor="radio-9"
      >
        <input
          checked={true}
          className="fd-form__control"
          disabled=""
          id="radio-9"
          name="radio-9"
          onChange={[Function]}
          type="radio"
          value="radio-9"
        />
        Option 3
      </label>
    </div>
  </div>
  <div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={false}
        className="fd-form__control"
        disabled={true}
        id="radio-7"
        name="radio-7"
        onChange={[Function]}
        type="radio"
        value="radio-7"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-7"
      >
        Option 1
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={false}
        className="fd-form__control"
        disabled={true}
        id="radio-8"
        name="radio-8"
        onChange={[Function]}
        type="radio"
        value="radio-8"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-8"
      >
        Option 2
      </label>
    </div>
    <div
      className="fd-form__item fd-form__item--check"
    >
      <input
        checked={true}
        className="fd-form__control"
        disabled={true}
        id="radio-9"
        name="radio-9"
        onChange={[Function]}
        type="radio"
        value="radio-9"
      />
      <label
        className="fd-form__label"
        htmlFor="radio-9"
      >
        Option 3
      </label>
    </div>
  </div>
  <legend
    className="fd-form__legend"
    legendText="Checkboxes"
  />
  <div
    className="fd-form__item fd-form__item--check blue"
  >
    <input
      className="fd-form__control blue"
      id="checkbox-1"
      name="checkbox-name-1"
      type="checkbox"
      value=""
    />
    <label
      className="fd-form__label blue"
      forAttr="checkbox-1"
    >
      Option One
      
    </label>
  </div>
</fieldset>
`;
